--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 packaging==24.2
+pillow==11.2.1
 PyJWT==2.9.0
 pytz==2025.2
 PyYAML==6.0.2
