--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,32 @@
 asgiref==3.8.1
 attrs==25.3.0
+botocore==1.38.45
+Brotli==1.1.0
+click==8.2.1
+colorama==0.4.6
+dj-database-url==3.0.1
 Django==5.1.7
 django-cors-headers==4.7.0
 django-restframework==0.0.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
+h11==0.16.0
 inflection==0.5.1
+jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 packaging==24.2
 pillow==11.2.1
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.24.0
+s3transfer==0.13.0
+six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.1
 uritemplate==4.1.1
+urllib3==2.5.0
