--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ django-cors-headers==4.7.0
 django-restframework==0.0.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
+gunicorn==23.0.0
 h11==0.16.0
 inflection==0.5.1
 jmespath==1.0.1
